# optiprop

./: .gitignore  LICENSE  MANIFEST.in  README.md  asia_1310.npy  pyproject.toml  requirements.txt  setup.py  test_basic.py
Example/: Dot_projector_Example1.ipynb  Laser2Metalens_Collimator_IdealPhase.py  Laser2Metalens_Collimator_MetaAtom.ipynb  Laser2Metalens_Collimator_MetaAtom.py  Laser2Metalens_Example0_ASM.ipynb  Metalens_Example1_ASM.ipynb  Metalens_Example1_FS.ipynb  Metalens_Example1_RS.ipynb  Metalens_Example2_MetaAtom.ipynb  Metalens_Example2_MetaAtom.py  hopfion.ipynb  hopfion.py  hopfion_scan.py
Inversed design/: AxiCubicPhase_Optimization_ASM.py  val.py
optiprop/: __init__.py  elements.py  metaatom.py  propagation.py  utils.py
