[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "optiprop"
version = "1.0.1"
description = "A Python library for optical field propagation simulation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yu-Chen-Yi", email = "chenyi@g.ncu.edu.tw"}
]
maintainers = [
    {name = "Yu-Chen-Yi", email = "chenyi@g.ncu.edu.tw"}
]
keywords = [
    "optics",
    "physics", 
    "simulation",
    "diffraction",
    "propagation",
    "fresnel",
    "angular spectrum",
    "rayleigh-sommerfeld",
    "pytorch",
    "gpu"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.7"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scikit-image>=0.18.0",
    "scipy>=1.7.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15",
]
gpu = [
    "torch[cuda]>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Yu-Chen-Yi/optiprop"
Documentation = "https://optiprop.readthedocs.io/"
Repository = "https://github.com/Yu-Chen-Yi/optiprop.git"
"Bug Tracker" = "https://github.com/Yu-Chen-Yi/optiprop/issues"

[tool.setuptools]
packages = ["optiprop"]

[tool.setuptools.package-data]
optiprop = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["optiprop"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]
